tests/invalid/vars_04.p
/*
 * vim: ft=plasma
 * This is free and unencumbered software released into the public domain.
 * See ../LICENSE.unlicense
 */

module Vars_04

export foo

func foo(a : Int, b : Int) -> Int {
    var c = a + b
    var c = a * b
    return c
}

